--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aax type Ahead</title>
+    <link rel="stylesheet" href=" style.css">
+    <link rel="shortcut icon" href="icon"/>
 </head>
 <body>
-
-  <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
-    </div>
-  </div>
-
-<script src = "script.js"></script>
+   <form class = "search-form">
+    <input type = "text" class="search-form" placeholder = "City or State">
+<ul class = "suggestions">
+    <li>Filter for a city</li>
+    <li>Filter for a state</li>
+</ul>
+</form>
+    <script src = "script.js"></script>
 </body>
 </html>
